--- a/dfjlCv.Rmd
+++ b/dfjlCv.Rmd
@@ -55,14 +55,6 @@ Aside
 ```
 
 
-```{r}
-if(params$pdf_mode){
-  cat("View this CV online with links at _nickstrayer.me/cv/_")
-} else {
-  cat("[<i class='fas fa-download'></i> Download a PDF of this CV](https://github.com/nstrayer/cv/raw/master/strayer_cv.pdf)")
-}
-```
-
 Contact {#contact}
 --------------------------------------------------------------------------------
 
@@ -85,7 +77,7 @@ Disclaimer {#disclaimer}
 
 Made with the R package [**pagedown**](https://github.com/rstudio/pagedown). 
 
-The source code is available [on github.com/nstrayer/cv](https://github.com/DFJL/cv).
+The source code is available [on github.com/DFJL/cv](https://github.com/DFJL/cv).
 
 Last updated on `r Sys.Date()`.
 
