Updating render function and setting a new index.html file

--- a/dfjlCv.Rmd
+++ b/dfjlCv.Rmd
@@ -7,7 +7,7 @@ params:
   pdf_mode:
     value: false
   cache_data:
-    value: false
+    value: True
 output:
   pagedown::html_resume:
     css: ['dd_cv.css', 'resume']
